# pycounts_junigord

./: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
tests/: test_pycounts_junigord.py
